k8s/apps/home/zigbee2mqtt/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
        np-ingress-controller-web: allow
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: zigbee2mqtt-data
              mountPath: /app/data
          resources:
            limits:
              squat.ai/zigbee: "1"
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
  selector:
    app: zigbee2mqtt
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zigbee.REDACTED`)
      kind: Rule
      middlewares:
        - name: forwardauth-authelia
          namespace: auth
      services:
        - name: zigbee2mqtt
          port: 8080
  tls:
    secretName: REDACTED-cert
