k8s/apps/home/zigbee2mqtt/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zigbee-mqtt-out
spec:
  podSelector:
    matchLabels:
      app: zigbee2mqtt
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: home
        podSelector:
          matchLabels:
            app: nats
